feat(pom): improve dependencies and build